# chess

./: CMakeLists.txt  chess.c  config.cmake
chessrules/: CMakeLists.txt  game.c
chessrules/moves/: CMakeLists.txt
chessrules/public/: game.h
mcts/: CMakeLists.txt  compare.c  select.c  tree.c
mcts/private/: compare.h
mcts/public/: select.h  tree.h
standards/: CMakeLists.txt
